<resources>
    <string name="app_name">Enruta2</string>

    <string name="action_logout">Cerrar Sesión</string>
    <string name="change_password">Cambio de contraseña</string>
    <string name="contact">Contacto</string>
    <string name="coordinator">Coordinador</string>
    <string name="description">Descripción</string>
    <string name="end_date">Fecha de inicio: %s</string>
    <string name="error_empty_field">El campo no puede estar vacío</string>
    <string name="error_image_not_selected">Selecciona una imagen o toma una foto primero</string>
    <string name="error_incorrect_login">Usuario o contraseña incorrectos</string>
    <string name="forgot_password">He olvidado mi contraseña</string>
    <string name="location_lat_long">%f, %f</string>
    <string name="login">Inicio</string>
    <string name="menu_alerts">Alertas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_transportation">Transporte</string>
    <string name="password">Contraseña</string>
    <string name="point_of_service">Punto</string>
    <string name="preference_acc_key">ACC_KEY</string>
    <string name="preference_file_key">SHARED_KEY</string>
    <string name="preference_lat_key">LAT_KEY</string>
    <string name="preference_long_key">LONG_KEY</string>
    <string name="preference_user_key">USER_KEY</string>
    <string name="preference_acc_coord">COORDINATOR</string>
    <string name="preference_acc_tech">TECHNICIAN</string>
    <string name="route_condinator">Coordinador de la ruta</string>
    <string name="start_date">Fecha de finalización: %s</string>
    <string name="status">Estado</string>
    <string name="tab_evidences">Evidencias</string>
    <string name="tab_information">Información</string>
    <string name="tab_requests">Solicitudes</string>
    <string name="user_name">Usuario</string>

    <!--autogenerated: -->
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_add_evidence">Adjuntar evidencia</string>
    <string name="images">Imágenes</string>
    <string name="documents">Documentos</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_gallery">Adjuntar imagen</string>
    <string name="image">Imagen</string>
    <string name="document">Documento</string>
    <string name="location">Ubicación</string>
    <string name="select_image">Seleccionar imagen</string>
    <string name="camera">Camera</string>
    <string name="save_image">Guardar imagen</string>
    <string name="image_saved">Imagen almacenada exitosamente</string>
    <string name="route_name">Nombre de la ruta</string>
    <string name="tech_mail">Email del técnico</string>
    <string name="create">Crear</string>

</resources>
