<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.AddRouteActivity">

    <EditText
        android:id="@+id/create_route_name"
        android:hint="@string/route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/create_route_mail"
        android:hint="@string/tech_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/create_route_button"
        android:text="@string/create"

        android:background="@color/orangeButton"
        android:textColor="@color/strongContrastColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>