<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_to_add"
            android:layout_width="300dp"
            android:layout_height="300dp"/>
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_get_image"
            android:text="@string/select_image"
            android:background="@color/orangeButton"
            android:textColor="@color/strongContrastColor"
            android:layout_marginRight="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/button_camera"
            android:text="@string/camera"
            android:background="@color/orangeButton"
            android:textColor="@color/strongContrastColor"
            android:layout_marginLeft="4dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <Button
        android:id="@+id/button_save_image"
        android:text="@string/save_image"
        android:background="@color/orangeButton"
        android:textColor="@color/strongContrastColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>