<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content">
            <TextView
                android:text="Ruta Antioquia"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="@dimen/h1"
                android:paddingVertical="16dp"
                android:layout_width="match_parent"
                android:id="@+id/route_name"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/start_date"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/end_date"
                android:textAlignment="center"
                android:id="@+id/label_created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/route_condinator"
                android:textAlignment="center"
                android:paddingVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content">
            <ImageButton
                android:tint="@color/orangeButton"
                android:src="@drawable/ic_map_black_24dp"
                android:paddingVertical="16dp"
                android:id="@+id/map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_tasks"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>